@@ -1,6 +1,6 @@
 #! /bin/sh
 # -*- scheme -*-
-exec guile-gnome-0 -s $0 "$@"
+exec guile-gnome-2 -s $0 "$@"
 !#
 ;; guile-gnome
 ;; Copyright (C) 1999 Free Software Foundation, Inc.
